--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -5,13 +5,13 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 0.5rem;
+  gap: 0.75rem;
 }
 
 .footer-title {
   font-family: 'Fira Code', monospace;
   color: var(--secondary-color);
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   font-weight: 500;
   display: flex;
   align-items: center;
@@ -31,8 +31,31 @@ footer {
 }
 
 .footer-icon {
-  height: 34px;
+  height: 30px;
   width: auto;
+}
+
+.github-icon {
+  color:white
+}
+
+.footer-links {
+  font-size: 0.95rem;
+  width: 60%;
+  display: grid;
+  gap: 0.2rem;
+}
+
+.footer-links > a {
+  color: white;
+  border-radius: 0.3rem;
+  padding: 0.2rem 0.4rem;
+  justify-self: start;
+  transition: all 0.2s ease;
+}
+
+.footer-links > a:hover {
+  background: rgba(255, 255, 255, 0.15)
 }
 
 footer small {
@@ -41,7 +64,7 @@ footer small {
 }
 
 @media screen and (max-width: 768px) {
-  .footer-btns {
+  .footer-btns, .footer-links {
     width: 80%;
   }
 }
