--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -35,6 +35,7 @@
 }
 
 .navbar-link {
+  color: black;
   transition: all 0.25s ease-in-out;
 }
 
@@ -74,6 +75,7 @@
     width: 100%;
     grid-column: 1 / -1;
     text-align: center;
+    line-height: 2.75rem;
   }
 
   .navbar-burger {
