--- a/src/App.css
+++ b/src/App.css
@@ -3,21 +3,112 @@ a {
   text-decoration: none;
 }
 
-button {
-  background: transparent;
-  border: none;
-  cursor: pointer;
-}
-
-main {
-  padding: 0.5rem 2rem;
-  min-height: calc(100vh - 5rem);
-}
-
 .inline-link {
   font-weight: 500;
 }
 
 .inline-link:hover {
   text-decoration: underline;
+}
+
+main {
+  padding: 3rem 2rem;
+  min-height: calc(100vh - 5rem);
+}
+
+h1 {
+  margin-top: 0;
+}
+
+form {
+  display: grid;
+  gap: 1rem;
+}
+
+fieldset {
+  border: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+}
+
+label {
+  color: var(--primary-color);
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+
+input, textarea, select {
+  font-family: 'Inter', sans-serif;
+  font-size: 1.1rem;
+  border: 2px solid var(--border-color);
+  border-radius: 0.3rem;
+  padding: 0.3rem 0.5rem;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+}
+
+input:focus, textarea:focus, select:focus {
+  border: 2px solid var(--secondary-color);
+  box-shadow: 0 0 0.14rem var(--primary-color);
+  outline: none;
+}
+
+select {
+  font-size: 1rem;
+}
+
+.dynamic-input {
+  width: max(50%, 40rem);
+}
+
+button {
+  font-family: 'Inter', sans-serif;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.btn {
+  font-size: 1.1rem;
+  border-radius: 0.3rem;
+  padding: 0.4rem 0.7rem;
+  transition: all 0.3s ease;
+}
+
+.primary-btn {
+  background: var(--primary-color);
+  color: white;
+  font-weight: 500;
+}
+
+.primary-btn:hover {
+  background: var(--secondary-color);
+  color: var(--primary-color);
+  box-shadow: -3px -3px 0 var(--primary-color);
+}
+
+.secondary-btn {
+  background: var(--border-color);
+  color: black;
+}
+
+.secondary-btn:hover {
+  background: #c2c2c2;
+  color: white;
+  box-shadow: -4px -4px 0 var(--border-color);
+}
+
+.button-group {
+  display: flex;
+  gap: 0.75rem;
+}
+
+@media screen and (max-width: 1024px) {
+  .dynamic-input {
+    width: auto;
+  }
 }
