--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ a {
 
 main {
   padding: 3rem 2rem;
-  min-height: calc(100vh - 4rem);
+  min-height: calc(100vh - 4rem  - 1px);
   box-sizing: border-box;
 }
 
