--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,4 +1,4 @@
-.navbar {
+.Navbar {
   display: grid;
   align-items: center;
   grid-template-columns: repeat(2, 1fr);
@@ -7,7 +7,7 @@
   border-bottom: 1px solid black;
 }
 
-.navbar-title {
+.NavbarTitle {
   font-family: 'Fira Code', monospace;
   color: var(--primary-color);
   font-size: 1.75rem;
@@ -19,32 +19,32 @@
   transition: text-shadow 0.18s ease-in-out;
 }
 
-.navbar-title:hover {
+.NavbarTitle:hover {
   text-shadow: var(--secondary-color) -3px -3px;
 }
 
-.navbar-title > img {
+.NavbarTitle > img {
   height: 2.75rem;
 }
 
-.navbar-menu {
+.NavbarMenu {
   justify-self: end;
   display: grid;
   grid-template-columns: repeat(3, auto);
   column-gap: 1.5rem;
 }
 
-.navbar-link {
+.NavbarLink {
   color: black;
   transition: all 0.25s ease-in-out;
 }
 
-.navbar-link:hover {
+.NavbarLink:hover {
   color: var(--primary-color);
   text-shadow: var(--primary-color) 0 0 10px;
 }
 
-.navbar-burger {
+.NavbarBurger {
   justify-self: end;
   display: none;
 }
@@ -52,39 +52,39 @@
 /* MEDIA QUERIES */
 
 @media screen and (max-width: 768px) {
-  .navbar-menu {
+  .NavbarMenu {
     grid-template-columns: auto;
     grid-column: 1 / -1;
     justify-self: center;
     overflow: hidden;
   }
 
-  .navbar-menu.open {
+  .NavbarMenu.Open {
     max-height: 10rem;
     visibility: visible;
     transition: max-height 0.25s ease-in;
   }
   
-  .navbar-menu.close {
+  .NavbarMenu.Close {
     max-height: 0;
     visibility: hidden;
     transition: max-height 0.15s ease-out;
   }
 
-  .navbar-item {
+  .NavbarItem {
     width: 100%;
     grid-column: 1 / -1;
     text-align: center;
     line-height: 2.75rem;
   }
 
-  .navbar-burger {
+  .NavbarBurger {
     display: block;
   }
 }
 
 @media screen and (max-width: 480px) {
-  .navbar {
+  .Navbar {
     padding: 0.5rem 1rem;
   }
 }
