--- a/src/App.css
+++ b/src/App.css
@@ -44,8 +44,9 @@ label {
 input, textarea, select {
   font-family: 'Inter', sans-serif;
   font-size: 1.1rem;
+  background: var(--border-color);
   border: 2px solid var(--border-color);
-  border-radius: 0.3rem;
+  border-radius: 0.4rem;
   padding: 0.3rem 0.5rem;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
