--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 :root {
   --primary-color: #fc573c;
   --secondary-color: #fee5e1;
-  --border-color: #eee;
+  --border-color: #f2f2f2;
 }
 
 body {
