--- a/src/components/auth/Auth.css
+++ b/src/components/auth/Auth.css
@@ -1,10 +1,44 @@
 .AuthSection {
-  width: 45rem;
-  margin: 0 auto;
+  height: 100%;
+  padding: 3rem 6vw;
+  display: grid;
+  grid-template-columns: 1fr 1.2fr;
+  align-items: center;
+  gap: 3rem;
+}
+
+.AuthForm {
+  margin-bottom: 10vh;
+}
+
+.AuthDoodle {
+  width: 100%;
+  justify-self: center;
+}
+
+@media screen and (max-width: 1024px) {
+  .AuthSection {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    width: calc(15rem + 40vw);
+    margin: auto;
+    gap: 1rem;
+  }
+
+  .AuthForm {
+    margin-bottom: 0;
+  }
 }
 
 @media screen and (max-width: 768px) {
   .AuthSection {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .AuthDoodle {
     width: 100%;
   }
 }
