--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@ input, textarea, select {
   background: var(--border-color);
   border: none;
   border-radius: 0.4rem;
-  padding: 0.4rem;
+  padding: 0.4rem 0.5rem;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
