--- a/src/components/dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard.css
@@ -1,3 +1,12 @@
+.Dasboard {
+  display: grid;
+  gap: 1rem;
+}
+
+.DashboardBtn {
+  font-size: 1rem;
+}
+
 .PostGrid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -9,6 +18,7 @@
   box-shadow: 5px 5px 0 black;
   padding: 1rem;
   display: grid;
+  align-self: start;
   transition: all 0.4s ease;
 }
 
@@ -22,20 +32,46 @@
 
 .PostCard > .InlineLink {
   margin-top: 1rem;
+  justify-self: start;
 }
 
 .SeeAllLink {
   grid-column: 1 / -1;
+  justify-self: start;
+  display: flex;
+  gap: 0.25rem;
+}
+
+.ExploreGrid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+}
+
+.ExploreGrid > img {
+  width: 100%;
+  grid-row: 1 / 3;
+  grid-column: 3 / -1;
+  align-self: center;
 }
 
 @media screen and (max-width: 1024px) {
-  .PostGrid {
+  .PostGrid, .ExploreGrid {
     grid-template-columns: repeat(2, 1fr);
+  }
+
+  .ExploreGrid > img {
+    grid-column: 2 / -1;
   }
 }
 
 @media screen and (max-width: 768px) {
-  .PostGrid {
+  .PostGrid, .ExploreGrid {
     grid-template-columns: 1fr;
+  }
+
+  .ExploreGrid > img {
+    grid-row: 6 / 7;
+    grid-column: 1 / -1;
   }
 }
