--- a/src/components/post/Post.css
+++ b/src/components/post/Post.css
@@ -9,6 +9,26 @@
   justify-items: center;
 }
 
+.PostButtons {
+  width: 100%;
+  padding-bottom: 0.5rem;
+  display: flex;
+  justify-content: flex-end;
+  gap: 0.75rem;
+}
+
+.PostButtons > a {
+  font-size: 0.9rem;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  gap: 0.1rem;
+}
+
+.PostButtons > a:hover {
+  opacity: 0.75;
+}
+
 .PostTitle {
   font-size: 2.5rem;
   margin-bottom: 0.5rem;
@@ -60,3 +80,4 @@
   margin: 0;
   grid-column: 1 / -1;
 }
+
