--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,12 @@ a {
   text-decoration: underline;
 }
 
+.IconLink {
+  grid-column: 1 / -1;
+  justify-self: start;
+  display: flex;
+}
+
 main {
   padding: 3rem 2rem;
   min-height: calc(100vh - 4rem  - 1px);
@@ -18,6 +24,7 @@ main {
 }
 
 h1 {
+  font-size: 2rem;
   margin-top: 0;
 }
 
@@ -136,6 +143,15 @@ button {
 .ButtonGroup {
   display: flex;
   gap: 0.75rem;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: grid;
+  gap: 0.5rem;
+  margin-bottom: 1rem;
 }
 
 @media screen and (max-width: 1024px) {
