--- a/src/components/error/Error.css
+++ b/src/components/error/Error.css
@@ -2,20 +2,20 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: relative;
+  text-align: center;
 }
 
 .ErrorPage > h1 {
-  font-size: 5rem;
+  font-size: 4.5rem;
   margin-bottom: 0;
 }
 
 .ErrorPage > strong {
-  font-size: 1.25rem;
+  font-size: 1.2rem;
 }
 
 .ErrorPage > p {
-  margin-bottom: 0;
+  font-size: 1.1rem;
 }
 
 .ErrorPage > a {
@@ -24,4 +24,10 @@
 
 .ErrorPage > img {
   width: min(30rem, 100%);
+}
+
+@media screen and (max-width: 768px) {
+  .ErrorPage > .ServerError {
+    font-size: 3rem;
+  }
 }
