--- a/src/components/post/Post.css
+++ b/src/components/post/Post.css
@@ -17,7 +17,8 @@
   gap: 0.75rem;
 }
 
-.PostButtons > a {
+.PostButtons > a, .CommentButtons > button {
+  color: var(--primary-color);
   font-size: 0.9rem;
   padding: 0;
   display: flex;
@@ -25,7 +26,7 @@
   gap: 0.1rem;
 }
 
-.PostButtons > a:hover {
+.PostButtons > a:hover, .CommentButtons > button:hover {
   opacity: 0.75;
 }
 
@@ -85,7 +86,7 @@
   box-shadow: 4px 4px 0 black;
   padding: 0.4rem 0.6rem;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr auto;
   gap: 0.3rem;
   transition: all 0.3s ease;
 }
@@ -100,6 +101,10 @@
 
 .Comment > small {
   justify-self: end;
+  grid-area: 1 / 2 / 2 / -1;
+  display: inline-flex;
+  align-items: center;
+  gap: 0.5rem;
 }
 
 .Comment > p {
@@ -107,3 +112,48 @@
   grid-column: 1 / -1;
 }
 
+.CommentButtons {
+  display: inline-flex;
+  justify-content: flex-end;
+  gap: 0.5rem;
+}
+
+.CommentModal.Hidden {
+  display: none;
+}
+
+.CommentModal {
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  height: 100vh;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.ModalBody {
+  background: white;
+  padding: 1rem;
+  display: grid;
+  justify-items: center;
+  gap: 1rem;
+  margin-bottom: 20vh;
+}
+
+.ModalBody > p {
+  margin: 0;
+}
+
+@media screen and (max-width: 768px) {
+  .Comment > small {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    grid-row: 1 / 3;
+    gap: 0;
+  }
+}
